(from getambassador.io) fix: visible text on backgroud

--- a/src/style.less
+++ b/src/style.less
@@ -975,7 +975,7 @@ body {
 
     &__nav {
       flex-direction: column;
-      height: 70px;
+      height: 75px;
 
       &-burger {
         display: flex;
